[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-p0curprh"
version = "0.1.0"
description = "A utility library with math, string, data, and validation tools"
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["src"]
omit = ["src/*/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true
